Fix sidebar in dark mode

--- a/style/dark.scss
+++ b/style/dark.scss
@@ -47,3 +47,9 @@ $input-bg: #242424;
   background-size: 1em;
   background-position: 1em 0.5em;
 }
+
+/* remove after https://github.com/quarto-dev/quarto-cli/pull/8193/files is merged */
+
+#quarto-content > #quarto-sidebar-glass {
+  padding-top: 0px;
+}
